--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
+    "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.7"
   },
