--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-compare-image": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "react-scroll-to-top": "^3.0.0",
