--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "aos": "^3.0.0-beta.6",
     "lightgallery": "^2.7.2",
     "localforage": "^1.10.0",
@@ -18,6 +19,7 @@
     "react-compare-image": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-messenger-chat-plugin": "^3.0.5",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
